# dsa-agent-azure-mlops

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: azure-ml.yml  build-image.yml  cd.yml  ci.yml  oidc-login-smoke.yml
config/: config.example.json
docs/: PROJECT_EVIDENCE.md
infra/: pipeline.yml  setup-azure.sh  teardown-azure.sh
mlops/azureml/components/: evaluate_agent_tools.yml  prepare_sample_data.yml
mlops/azureml/environments/: dsa-agent-pipeline-conda.yml
mlops/azureml/pipelines/: agent_eval_pipeline.yml
mlops/azureml/scripts/: evaluate_agent_tools.py  prepare_sample_data.py
notebooks/: demo.ipynb  demo.py
scripts/: 02_verify_project_safety.ps1  04_generate_sample_sqlite_db.py
src/dsa/: cli.py  config.py  embeddings.py  llm.py
src/dsa/agents/: __init__.py  eda_tools.py  ml_agent.py  pandas_agent.py  plot_agent.py  router.py  sql_agent.py  stats_agent.py
src/dsa/export/: artifacts.py
src/dsa/rag/: chain.py  format.py  ingest.py
tests/: test_azureml_scripts.py  test_cli.py  test_config.py  test_eda_tools.py  test_embeddings_factory.py  test_imports.py  test_llm_factory.py  test_ml_agent.py  test_plot_agent.py  test_router.py  test_sql_agent.py  test_stats_agent.py
